www/versioned_docs/version-5.21.0/API/namespaces/constants.md
---
id: 'constants'
title: 'Namespace: constants'
sidebar_label: 'constants'
sidebar_position: 0
custom_edit_url: null
---

Utils

## Enumerations

- [BaseUrl](../enums/constants.BaseUrl.md)
- [NetworkName](../enums/constants.NetworkName.md)
- [StarknetChainId](../enums/constants.StarknetChainId.md)
- [TransactionHashPrefix](../enums/constants.TransactionHashPrefix.md)

## Variables

### IS_BROWSER

• `Const` **IS_BROWSER**: `boolean`

#### Defined in

[src/utils/encode.ts:2](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/utils/encode.ts#L2)

---

### TEXT_TO_FELT_MAX_LEN

• `Const` **TEXT_TO_FELT_MAX_LEN**: `31`

Cairo Felt support storing max 31 character

#### Defined in

[src/constants.ts:6](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L6)

---

### HEX_STR_TRANSACTION_VERSION_1

• `Const` **HEX_STR_TRANSACTION_VERSION_1**: `"0x1"`

#### Defined in

[src/constants.ts:8](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L8)

---

### HEX_STR_TRANSACTION_VERSION_2

• `Const` **HEX_STR_TRANSACTION_VERSION_2**: `"0x2"`

#### Defined in

[src/constants.ts:9](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L9)

---

### BN_TRANSACTION_VERSION_1

• `Const` **BN_TRANSACTION_VERSION_1**: `1n`

#### Defined in

[src/constants.ts:10](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L10)

---

### BN_TRANSACTION_VERSION_2

• `Const` **BN_TRANSACTION_VERSION_2**: `2n`

#### Defined in

[src/constants.ts:11](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L11)

---

### BN_FEE_TRANSACTION_VERSION_1

• `Const` **BN_FEE_TRANSACTION_VERSION_1**: `bigint`

#### Defined in

[src/constants.ts:12](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L12)

---

### BN_FEE_TRANSACTION_VERSION_2

• `Const` **BN_FEE_TRANSACTION_VERSION_2**: `bigint`

#### Defined in

[src/constants.ts:13](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L13)

---

### ZERO

• `Const` **ZERO**: `0n`

#### Defined in

[src/constants.ts:15](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L15)

---

### MASK_250

• `Const` **MASK_250**: `bigint`

#### Defined in

[src/constants.ts:16](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L16)

---

### MASK_251

• `Const` **MASK_251**: `bigint`

#### Defined in

[src/constants.ts:17](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L17)

---

### API_VERSION

• `Const` **API_VERSION**: `0n`

#### Defined in

[src/constants.ts:18](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L18)

---

### UDC

• `Const` **UDC**: `Object`

#### Type declaration

| Name         | Type     |
| :----------- | :------- |
| `ADDRESS`    | `string` |
| `ENTRYPOINT` | `string` |

#### Defined in

[src/constants.ts:43](https://github.com/starknet-io/starknet.js/blob/v5.21.0/src/constants.ts#L43)
