www/versioned_docs/version-5.29.0/API/namespaces/constants.md
---
id: 'constants'
title: 'Namespace: constants'
sidebar_label: 'constants'
sidebar_position: 0
custom_edit_url: null
---

Utils

## Enumerations

- [BaseUrl](../enums/constants.BaseUrl.md)
- [NetworkName](../enums/constants.NetworkName.md)
- [StarknetChainId](../enums/constants.StarknetChainId.md)
- [TransactionHashPrefix](../enums/constants.TransactionHashPrefix.md)

## Variables

### IS_BROWSER

• `Const` **IS_BROWSER**: `boolean`

#### Defined in

[src/utils/encode.ts:4](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/utils/encode.ts#L4)

---

### TEXT_TO_FELT_MAX_LEN

• `Const` **TEXT_TO_FELT_MAX_LEN**: `31`

Cairo Felt support storing max 31 character

#### Defined in

[src/constants.ts:6](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L6)

---

### HEX_STR_TRANSACTION_VERSION_1

• `Const` **HEX_STR_TRANSACTION_VERSION_1**: `"0x1"`

#### Defined in

[src/constants.ts:8](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L8)

---

### HEX_STR_TRANSACTION_VERSION_2

• `Const` **HEX_STR_TRANSACTION_VERSION_2**: `"0x2"`

#### Defined in

[src/constants.ts:9](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L9)

---

### BN_TRANSACTION_VERSION_1

• `Const` **BN_TRANSACTION_VERSION_1**: `1n`

#### Defined in

[src/constants.ts:10](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L10)

---

### BN_TRANSACTION_VERSION_2

• `Const` **BN_TRANSACTION_VERSION_2**: `2n`

#### Defined in

[src/constants.ts:11](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L11)

---

### BN_FEE_TRANSACTION_VERSION_1

• `Const` **BN_FEE_TRANSACTION_VERSION_1**: `bigint`

#### Defined in

[src/constants.ts:12](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L12)

---

### BN_FEE_TRANSACTION_VERSION_2

• `Const` **BN_FEE_TRANSACTION_VERSION_2**: `bigint`

#### Defined in

[src/constants.ts:13](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L13)

---

### ZERO

• `Const` **ZERO**: `0n`

#### Defined in

[src/constants.ts:15](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L15)

---

### MASK_250

• `Const` **MASK_250**: `bigint`

#### Defined in

[src/constants.ts:16](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L16)

---

### API_VERSION

• `Const` **API_VERSION**: `0n`

#### Defined in

[src/constants.ts:17](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L17)

---

### MAX_STORAGE_ITEM_SIZE

• `Const` **MAX_STORAGE_ITEM_SIZE**: `256n`

#### Defined in

[src/constants.ts:20](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L20)

---

### ADDR_BOUND

• `Const` **ADDR_BOUND**: `bigint`

#### Defined in

[src/constants.ts:21](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L21)

---

### UDC

• `Const` **UDC**: `Object`

#### Type declaration

| Name         | Type     |
| :----------- | :------- |
| `ADDRESS`    | `string` |
| `ENTRYPOINT` | `string` |

#### Defined in

[src/constants.ts:49](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L49)

---

### RPC_DEFAULT_VERSION

• `Const` **RPC_DEFAULT_VERSION**: `"v0_5"`

#### Defined in

[src/constants.ts:54](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L54)

---

### RPC_NODES

• `Const` **RPC_NODES**: `Object`

#### Type declaration

| Name         | Type       |
| :----------- | :--------- |
| `SN_GOERLI`  | `string`[] |
| `SN_MAIN`    | `string`[] |
| `SN_SEPOLIA` | `string`[] |

#### Defined in

[src/constants.ts:56](https://github.com/starknet-io/starknet.js/blob/v5.29.0/src/constants.ts#L56)
